# jobcity

./: .env  .gitignore  Add Frequently Asked Questions (FAQ) to documentation  INSTALLATION.md  LICENSE  README.md  WORKFLOW.md  contributing.md  frontend_structure_summary.md  next.config.js  package-lock.json  package.json  project-flowchart.mermaid  restructure_plan.md  server.js  tailwind.config.js  tsconfig.json
backend/: .env  .env.example  .env.test  .gitignore  Procfile  alembic.ini  analytics_feedback.py  app.json  app_config.py  application_tracking.py  conftest.py  interview_scheduling.py  main.py  notes_section.py  planner_requirements.md  planner_wireframes.md  pyproject.toml  pytest.ini  reminders_notifications.py  requirements.txt  setup_nltk.py  test-requirements.txt  test_db_connection.py  test_db_setup.py  test_unified_agent.py  to_do_lists.py  verify_models.py
backend/alembic/: env.py
backend/blockchain/: main.py  package-lock.json  package.json  pnpm-lock.yaml
backend/indeed/: indeed_job_agent.py  indeed_scraper.py
backend/jobcity_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/: backend_integration.py  config.py  indeed_authenticator.py  indeed_bot_facade.py  indeed_job_manager.py  jobcity_authenticator.py  jobcity_job_manager.py  main.py  utils.py
backend/tests/: __init__.py  conftest.py  test.env  test_analytics_feedback.py  test_application_tracking.py  test_backend_integration.py  test_credential_management.py  test_document_validation.py  test_integration.py  test_interview_scheduling.py  test_jobcity_authenticator.py  test_jobcity_easy_applier.py  test_jobcity_job_manager.py  test_main.py  test_notes_section.py  test_reminders_notifications.py  test_security.py  test_to_do_lists.py  test_utils.py
(+210 files in other folders)
