[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobcity-backend"
version = "0.1.0"
description = "Backend for JobCity application including the planner feature"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0,<0.69.0",
    "pydantic>=1.8.0,<2.0.0",
    "uvicorn>=0.15.0,<0.16.0",
    "pytest>=6.2.5,<7.0.0",
    "httpx>=0.23.0,<0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src"

[tool.coverage.run]
source = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
