[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobcity-backend"
version = "0.1.0"
description = "JobCity Backend - Automated Job Application System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.4",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.2",
    "sqlalchemy>=2.0.36",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]
